samples/_failures_safe/1761198684_5a936a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d1ed3d9a.c: In function ‘main’:
./samples/SAFE/__tmp_d1ed3d9a.c:147:5: error: expected declaration or statement at end of input
  147 |     if (build_output(words, word_count, output, sizeof(output))) {
      |     ^~
./samples/SAFE/__tmp_d1ed3d9a.c:147:5: error: expected declaration or statement at end of input
